[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "uv", "build", "wheel"]

[project]
authors = [{name = "Floris Laporte", email = "floris.laporte@gmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "black>=25.1.0",
  "flax>=0.10.0",
  "jax>=0.5.0",
  "jaxlib>=0.5.0",
  "jaxtyping>=0.2.38",
  "klujax>=0.4.1",
  "matplotlib>=3.0.0",
  "natsort>=8.0.0",
  "networkx>=3.0.0",
  "numpy>=2.2.0",
  "orjson>=3.0.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.0",
  "xarray>=2025.1.2"
]
description = "Autograd and XLA for S-parameters"
name = "sax"
readme = "README.md"
requires-python = ">=3.11.0"
version = "0.14.5"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "gdsfactory>=9.7.0",
  "ipykernel>=6.29.5",
  "meow-sim>=0.13.0",
  "mkinit>=1.1.0",
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pyright>=1.1.0",
  "ruff>=0.9.0",
  "scikit-learn>=1.6.1",
  "tbump>=6.0.0",
  "tmm>=0.2.0",
  "towncrier>=24.0.0"
]
docs = [
  "griffe>=1.5.6",
  "mkautodoc>=0.2.0",
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-material>=9.6.0",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.27.0",
  "papermill>=2.6.0"
]
nbs = [
  "altair>=5.5.0",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.0",
  "nbconvert>=7.16.6",
  "plotly>=6.0.0",
  "vega-datasets>=0.9.0"
]
test = [
  "pytest-cov>=6.0.0",
  "pytest-randomly>=3.16.0",
  "pytest-xdist>=3.6.0",
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
addopts = '--tb=short'
norecursedirs = ["scripts"]
testpaths = ["src/tests"]

[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = [
  "COM812",
  "PD901",
  "TC003",
  "TC006",
  "ANN401",
  "PLR0913",
  "C420"
]
per-file-ignores = {"src/tests/*.py" = ["D", "INP001"]}
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
where = ["src"]

[tool.tbump]

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "sax/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "0.14.5"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
