[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "uv", "build", "wheel"]

[project]
authors = [{name = "Floris Laporte", email = "floris.laporte@gmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "flax>=0.10.0",
  "jax>=0.6.0",
  "jaxtyping>=0.2.38",
  "klujax>=0.4.1",
  "matplotlib>=3.0.0",
  "natsort>=8.0.0",
  "networkx>=3.0.0",
  "numpy>=2.2.0",
  "orjson>=3.0.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.0",
  "xarray>=2025.1.2"
]
description = "Autograd and XLA for S-parameters"
keywords = [
  "simulation",
  "optimization",
  "autograd",
  "simulation-framework",
  "circuit",
  "physics-simulation",
  "photonics",
  "s-parameters",
  "jax",
  "xla",
  "photonic-circuit",
  "photonic-optimization"
]
license = {text = "Apache Software License"}
name = "sax"
readme = "README.md"
requires-python = ">=3.11.0"
version = "0.15.3"

[project.optional-dependencies]
dev = [
  "altair>=5.5.0",
  "build>=1.2.0",
  "gdsfactory>=9.7.0",
  "griffe>=1.5.6",
  "ipykernel>=6.29.5",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.0",
  "meow-sim>=0.14.0",
  "mkautodoc>=0.2.0",
  "mkdocs-autorefs>=1.3.0",
  "mkdocs-material>=9.6.0",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.27.0",
  "mkinit>=1.1.0",
  "nbconvert>=7.16.6",
  "papermill>=2.6.0",
  "plotly>=6.0.0",
  "pre-commit>=4.1.0",
  "pyright>=1.1.0",
  "pytest-cov>=6.0.0",
  "pytest-randomly>=3.16.0",
  "pytest-xdist>=3.6.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "scikit-learn>=1.6.1",
  "tbump>=6.0.0",
  "tmm>=0.2.0",
  "towncrier>=24.0.0",
  "vega-datasets>=0.9.0",
  "nb-clean>=4.0.1",
  "ty>=0.0.1a11",
  "nbstripout>=0.8.1",
  "mkdocs-matplotlib"
]

[tool.pytest.ini_options]
addopts = '--tb=short'
norecursedirs = ["scripts"]
testpaths = ["src/tests"]

[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = [
  "COM812",  # missing-trailing-comma
  "D105",  # undocumented-magic-method
  "E741",  # ambiguous-variable-name
  "ERA001",  # commented-out-code
  "FIX001",  # line-contains-fixme
  "FIX002",  # line-contains-todo
  "FIX004",  # line-contains-hack
  "N803",  # invalid-argument-name
  "N806",  # non-lowercase-variable-in-function
  "PD901",  # pandas-df-variable-name
  "PLC0414",  # useless-import-alias
  "PLC0415",  # import-outside-top-level
  "PLR0913",  # too-many-arguments
  "PLR2004",  # magic-value-comparison
  "PLW2901",  # redefined-loop-name
  "RET504",  # unnecessary-assign
  "RUF002",  # ambiguous-unicode-character-docstring
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
  "TD001",  # invalid-todo-tag
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
  "TID252",  # relative-imports
  "TRY003"  # raise-vanilla-args
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "ANN",  # flake8-annotations
  "ARG001",  # unused-function-argument
  "D",  # pydocstyle
  "E402",  # module-import-not-at-top-of-file
  "E501",  # line-too-long
  "F821",  # undefined-name
  "FBT003",  # boolean-positional-value-in-call
  "N816",  # mixed-case-variable-in-global-scope
  "PLC2401",  # non-ascii-name
  "S101",  # assert
  "SLF001",  # private-member-access
  "T201"  # print
]
"src/sax/saxtypes/*.py" = [
  "ANN401"  # any-type
]
"src/tests/*" = [
  "D",  # pydocstyle
  "PT011",  # pytest-raises-too-broad
  "S101",  # assert
  "INP001"  # implicit-namespace-package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
where = ["src"]

[tool.tbump]

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "src/sax/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "0.15.3"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
