[metadata]
name = sax
version = 0.6.2
description = Autograd and XLA for S-parameters
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux

[options]
packages =
  sax
  sax.nn
  sax.backends
install_requires =
  fastcore
  h5py
  pytables
  natsort
  networkx
  numpy
  pyyaml
  tqdm

[options.extras_require]
nojax =
  numpy
jax =
  jax
  flax
  jaxlib
klu =
  klujax
dev =
  black
  build
  bump2version
  flax
  ipykernel
  ipympl
  ipywidgets
  jax
  jaxlib
  jupyterlab
  line_profiler
  make
  matplotlib
  nbdev
  nbstripout
  pandas
  papermill
  patch
  pre-commit
  pyright
  pytest
  pyyaml
  scipy
  tqdm
  twine
  typing-extensions

[options.package_data]
* =
  settings.ini
  LICENSE
  CONTRIBUTING.md
  README.md
