[metadata]
name = sax
version = 0.7.3
description = Autograd and XLA for S-parameters
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux

[options]
packages =
  sax
  sax.nn
  sax.backends
install_requires =
  fastcore
  h5py
  natsort
  networkx
  numpy
  pydantic<2
  pydot
  pyyaml
  tables
  tqdm
  orjson

[options.extras_require]
nojax =
  numpy
jax =
  jax
  flax
  jaxlib
gf =
  gdsfactory>5
  meep
klu =
  klujax
dev =
  black
  build
  isort
  bump2version
  flax
  ipykernel
  ipympl
  ipywidgets
  jax
  jaxlib
  jupyterlab
  line_profiler
  make
  matplotlib
  nbdev<2
  nbstripout
  pandas
  papermill
  patch
  pre-commit
  pyright
  pytest
  pyyaml
  scipy
  tqdm
  twine
  typing-extensions
  jupyter-book
  datamodel-codegen

[options.package_data]
* =
  settings.ini
  LICENSE
  CONTRIBUTING.md
  README.md
