[metadata]
name = sax
version = 0.8.0
description = Autograd and XLA for S-parameters
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux

[options]
packages =
  sax
  sax.nn
  sax.backends

install_requires =
  black
  fastcore
  h5py
  natsort
  networkx
  numpy
  orjson
  pydantic<2
  pyyaml
  tables
  tqdm

[options.extras_require]
nojax =
  sax

jax =
  sax
  jax
  flax
  jaxlib

full =
  sax[jax]
  bokeh
  gdsfactory>=5
  graphviz
  ipykernel
  ipympl
  ipywidgets
  jupyterlab
  matplotlib
  meep
  pandas
  pydot
  scipy
  shapely

klu =
  sax[jax]
  klujax

dev =
  sax[jax]
  bump2version
  datamodel-code-generator
  flax
  ipykernel
  ipympl
  ipywidgets
  isort
  jax
  jaxlib
  jupyter-book
  jupyterlab
  line_profiler
  matplotlib
  nbdev<2
  nbstripout
  pandas
  papermill
  pre-commit
  pyright
  pytest
  pyyaml
  scipy
  tmm
  tqdm
  twine

[options.package_data]
* =
  settings.ini
  LICENSE
  CONTRIBUTING.md
  README.md
